--- a/Intellij/dependency-injection/pom.xml
+++ b/Intellij/dependency-injection/pom.xml
@@ -35,6 +35,14 @@
             <version>${spring-version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+
+
 
     </dependencies>
 
