--- a/Intellij/dependency-injection/pom.xml
+++ b/Intellij/dependency-injection/pom.xml
@@ -42,6 +42,11 @@
             <version>8.0.28</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
 
     </dependencies>
